Code reformated and refactored